Ensure heading banner text doesn't overlap social share icons

--- a/src/components/biggive-heading-banner/biggive-heading-banner.scss
+++ b/src/components/biggive-heading-banner/biggive-heading-banner.scss
@@ -66,7 +66,7 @@
 .content-wrap {
   position: relative;
   padding-top: 70px; // includes 30 extra on mobile to make space for overlapping 'main-message-wrap'
-  padding-right: 30px;
+  padding-right: 50px; // Avoid overlapping social icons
   padding-left: 30px;
   padding-bottom: 30px;
   box-sizing: border-box;
